--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
+    "codemirror": "^5.65.2",
     "core-js": "^3.20.2",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
