Specify node version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "master.thesis.frontend",
   "version": "1.0.0",
+  "engines": {
+    "node": "17.x"
+  },
   "description": "Web application for master thesis",
   "main": "main.js",
   "scripts": {
