--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "engines": {
     "node": "17.x",
-    "npm": "8.x"
+    "npm": "8.3.0"
   },
   "description": "Web application for master thesis",
   "main": "main.js",
