--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
+    "parcel": "^2.3.2",
     "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
